# agrometeo-geopy

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
agrometeo/: __init__.py  base.py  core.py  plotting.py  settings.py
docs/: api.md  conf.py  environment.yml  index.md  installation.md  usage.ipynb  usage.md
docs/css/: extra.css
tests/: __init__.py  test_agrometeo.py  test_agrometeo_geopy.py
