[tool]

[tool.poetry]
name = "agrometeo_geopy"
version = "0.1.3"
homepage = "https://github.com/martibosch/agrometeo-geopy"
description = "Pythonic interface to access Agrometeo data."
authors = ["Martí Bosch <marti.bosch@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [{ include = "agrometeo" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
black = { version = "^22.3", optional = true }
isort = { version = "5.6.4", optional = true }
flake8 = { version = "3.8.4", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "2.10.1", optional = true }
ruff = {version = "^0.0.260", optional = true}
tox = { version = "^3.20.1", optional = true }
virtualenv = { version = "^20.2.2", optional = true }
pip = { version = "^20.3.1", optional = true }
twine = { version = "^3.3.0", optional = true }
pre-commit = { version = "^2.12.0", optional = true }
toml = { version = "^0.10.2", optional = true }
myst-parser = { version = "~1", optional = true }
nbsphinx = { version = "^0.9.1", optional = true }
sphinx = { version = "^6.1.3", optional = true }
geopandas = "^0.10.2"
matplotlib = "^3.5.1"
osmnx = { version = "^1.1.2", optional = true }
contextily = { version = "^1.2.0", optional = true }
requests = "^2.27.1"

[tool.poetry.extras]
ox = ["osmnx"]
cx = ["contextily"]
test = ["black", "pytest", "pytest-cov", "ruff"]
dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]
doc = ["myst-parser", "nbsphinx", "sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.isort]
known-first-party = ["agrometeo"]

[tool.ruff.per-file-ignores]
"agrometeo/__init__.py" = ["F403"]

[tool.nbqa.addopts]
ruff = [
    "--ignore=D,I"
]

[tool.poetry_bumpversion.file."agrometeo/__init__.py"]
[tool.poetry_bumpversion.file."docs/conf.py"]
